2025-XX Feature Update for Version 2501 (4.4.XX)

--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>NRFZ | Works by NRFZ</title>
+    <title>NRFZ | Works By NRFZ</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -52,9 +52,9 @@
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li class="active"><a href="./works-by-nrfz.html">Works by NRFZ</a></li>
+                                    <li class="active"><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
-                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"><i
+                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
                                                 class="fa-solid fa-moon"></i></button></li>
                                 </ul>
                             </div>
@@ -77,10 +77,10 @@
                             <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item"><a href="index.html"> Home</a>
                                 </li>
-                                <li class="breadcrumb-item active" aria-current="page">Works by NRFZ</li>
+                                <li class="breadcrumb-item active" aria-current="page">Works By NRFZ</li>
                             </ol>
                         </nav>
-                        <h2 class="page-title">Works by NRFZ</h2>
+                        <h2 class="page-title">Works By NRFZ</h2>
                     </div>
                 </div>
             </div>
