--- a/about.html
+++ b/about.html
@@ -53,9 +53,11 @@
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
                                     <li class="active"><a href="./about.html">About</a></li>
-                                    <li><a href="./works-by-nrfz.html">Works by NRFZ</a></li>
+                                    <li><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
-                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"><i class="fa-solid fa-moon"></i></button></li>
+                                    <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
+                                            title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
+                                    </li>
                                 </ul>
                             </div>
 
