--- a/worksbynrfz/mrt-signage-rep-s2.html
+++ b/worksbynrfz/mrt-signage-rep-s2.html
@@ -55,7 +55,7 @@
                 <ul id="nav">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="../about.html">About</a></li>
-                  <li class="active"><a href="../works-by-nrfz.html">Works by NRFZ</a></li>
+                  <li class="active"><a href="../works-by-nrfz.html">Works By NRFZ</a></li>
                   <li><a href="../blog.html">Blog</a></li>
 
                 </ul>
