2025-XX Feature Update for Version 2501 (4.2.XX)

--- a/overview/days-overview.html
+++ b/overview/days-overview.html
@@ -9,15 +9,15 @@
 
     <!-- NSL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-nsl h-100 py-2" style="background-color: #ff9e97;">
-            <div class="card-body">
+        <div class="card card-nsl border-left-nsl h-100 py-2">
+            <div class="card-body card-body-nsl">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-nsl text-uppercase mb-1">
                             <a href="mrt-lines/nsl.html">North-South Line</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">11 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">11 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
@@ -31,7 +31,7 @@
 
     <!-- EWL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-ewl h-100 py-2" style="background-color: #afe9ca;">
+        <div class="card card-ewl border-left-ewl h-100 py-2">
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
@@ -39,7 +39,7 @@
                             <a href="mrt-lines/ewl.html">East-West Line</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">35 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">35 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
