2025-XX Feature Update for Version 2501 (4.2.XX)

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
         <div class="row row-do">
             <div class="chart col-xl-12 col-lg-12 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-do h-100 py-2">
-                    <div class="card-header py-3 d-flex align-items-center justify-content-between"
-                        style="background-color: #c4cbe7;">
+                    <div class="card-header card-header-active py-3 d-flex align-items-center justify-content-between">
                         <h6 class="m-0 font-weight-bold text-black">
                             <span data-title="Delays less than 10 mins won't be reflected in this chart.">
                                 Delays Overview (< 10 mins) </span>
@@ -176,8 +175,8 @@
         data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
-
-    <script src="js/theme.js"></script>
+<!-- 
+    <script src="js/theme.js"></script> -->
 
     <script src="js/jquery.min.js"></script>
 
@@ -198,6 +197,7 @@
 
     <!-- Page level custom scripts -->
     <script src="overview/delays-overview-both.js"></script>
+
 
 </body>
 
