--- a/overview/days-overview.html
+++ b/overview/days-overview.html
@@ -32,7 +32,7 @@
     <!-- EWL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
         <div class="card card-ewl border-left-ewl h-100 py-2">
-            <div class="card-body">
+            <div class="card-body card-body-ewl">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-ewl text-uppercase mb-1">
@@ -53,15 +53,15 @@
 
     <!-- NEL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-nel h-100 py-2" style="background-color: #dbb0e8;">
-            <div class="card-body">
+        <div class="card card-nel border-left-nel h-100 py-2">
+            <div class="card-body card-body-nel">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-nel text-uppercase mb-1">
                             <a href="mrt-lines/nel.html">North East Line</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">236 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">236 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
@@ -75,15 +75,15 @@
 
     <!-- CCL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-ccl h-100 py-2" style="background-color: #fdd79b;">
-            <div class="card-body">
+        <div class="card card-ccl border-left-ccl h-100 py-2">
+            <div class="card-body card-body-ccl">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-ccl text-uppercase mb-1">
                             <a href="mrt-lines/ccl.html">Circle Line</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">29 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">29 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
@@ -97,15 +97,15 @@
 
     <!-- DTL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-dtl h-100 py-2" style="background-color: #b0cce8;">
-            <div class="card-body">
+        <div class="card card-dtl border-left-dtl h-100 py-2">
+            <div class="card-body card-body-dtl">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-dtl text-uppercase mb-1">
                             <a href="mrt-lines/dtl.html">Downtown Line</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">242 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">242 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
@@ -119,15 +119,15 @@
 
     <!-- TEL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-tel h-100 py-2" style="background-color: #e8ccb0;">
-            <div class="card-body">
+        <div class="card card-tel border-left-tel h-100 py-2">
+            <div class="card-body card-body-tel">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-tel text-uppercase mb-1">
                             <a href="mrt-lines/tel.html">Thomson-East Coast Line</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">19 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">19 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
@@ -141,15 +141,15 @@
 
     <!-- BPLRT -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-lrt h-100 py-2" style="background-color: #e7e7e7;">
-            <div class="card-body">
+        <div class="card card-lrt border-left-lrt h-100 py-2">
+            <div class="card-body card-body-lrt">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
                             <a href="mrt-lines/bp.html">Bukit Panjang LRT</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">91 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">91 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
@@ -163,15 +163,15 @@
 
     <!-- SKPGLRT -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
-        <div class="card border-left-lrt h-100 py-2" style="background-color: #e7e7e7;">
-            <div class="card-body">
+        <div class="card card-lrt border-left-lrt h-100 py-2">
+            <div class="card-body card-body-lrt">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
                             <a href="mrt-lines/sk.html">Sengkang</a>-<a href="mrt-lines/pg.html">Punggol LRT</a>
                         </div>
                         <!-- Days -->
-                        <div class="h5 days mb-0 font-weight-bold text-black">226 Days</div>
+                        <div class="h5 days mb-0 font-weight-bold">226 Days</div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
                     </div>
