--- a/mrt-lines/nsl.html
+++ b/mrt-lines/nsl.html
@@ -16,8 +16,9 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-breakpoints.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style-breakpoints.css">
+  <link rel="stylesheet" href="../css/dark-mode.css">
 
   <link rel="stylesheet" href="../css/swiper-bundle.min.css">
   <link rel="stylesheet" href="../css/glightbox.min.css">
@@ -32,36 +33,39 @@
 
   <header class="header-area">
     <div class="main-header-area">
-        <div class="classy-nav-container breakpoint-off">
-            <div class="container container-xxl">
+      <div class="classy-nav-container breakpoint-off">
+        <div class="container container-xxl">
 
-                <nav class="classy-navbar justify-content-between" id="pwNav">
+          <nav class="classy-navbar justify-content-between" id="pwNav">
 
-                    <a class="nav-brand img-logo" href="../index.html"><img src="../img/core-img/logo.png" alt></a>
+            <a class="nav-brand img-logo" href="../index.html"><img src="../img/core-img/logo.png" alt></a>
 
-                    <div class="classy-navbar-toggler">
-                        <span class="navbarToggler"><span></span><span></span><span></span></span>
-                    </div>
-
-                    <div class="classy-menu">
-
-                        <div class="classycloseIcon">
-                            <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-                        </div>
-                        <div class="classynav">
-                            <ul id="nav">
-                                <li><a href="../statistics/statistics.html">Statistics</a></li>
-                                <li><a href="../past-records/past-records.html">Past Records</a></li>
-                                <li class="active"><a href="../our-networks.html">Networks</a></li>
-                            </ul>
-                        </div>
-
-                    </div>
-                </nav>
+            <div class="classy-navbar-toggler">
+              <span class="navbarToggler"><span></span><span></span><span></span></span>
             </div>
+
+            <div class="classy-menu">
+
+              <div class="classycloseIcon">
+                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+              </div>
+              <div class="classynav">
+                <ul id="nav">
+                  <li><a href="../statistics/statistics.html">Statistics</a></li>
+                  <li><a href="../past-records/past-records.html">Past Records</a></li>
+                  <li class="active"><a href="../our-networks.html">Networks</a></li>
+                  <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
+                        class="fa-solid fa-moon"></i></button>
+                  </li>
+                </ul>
+              </div>
+
+            </div>
+          </nav>
         </div>
+      </div>
     </div>
-</header>
+  </header>
 
 
   <section class="breadcrumb-area-lines bg-img bg-overlay" style="background-image: url(../img/networks/nslA.png)">
@@ -90,7 +94,8 @@
       <div class="container container-summary">
         <div class="col-lg-12">
           <div class="main-title">
-            <span style="color: #b70e0e; cursor: pointer;" title="Click me to hear one of the NSL Chimes!" onclick="playAudio()" >SMRT Trains</span>
+            <span style="color: #b70e0e; cursor: pointer;" title="Click me to hear one of the NSL Chimes!"
+              onclick="playAudio()">SMRT Trains</span>
             <h1 style="cursor: default;">
               North-South Line</h1>
           </div>
@@ -113,16 +118,16 @@
 
           <div class="col-sm-3 single_catagory">
             <span>Operated By</span>
-            <img class="logo-operator" src="../img/core-img/stl.png" alt="smrt" width="170px">
+            <img class="logo-operator" src="../img/core-img/stl.png" id="ops-smrt" alt="smrt" width="170px">
           </div>
-          
+
         </div>
       </div>
       <div style="background-color: #E22726; width: 100%; height: 20px;"></div>
     </div>
   </section>
 
-  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+  <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="300ms">
       <div class="container container-xxl">
 
@@ -155,9 +160,9 @@
 
               <h3 class="ld-s-title">Line Diagram</h3>
               <div class="row row-line-diag justify-content-center">
-                <a href="../img/networks/nsl-diag.png" class="portfolio-img"><img src="../img/networks/nsl-diag.png"
-                  class="img-fluid" alt="cover-page"></a>
-                </div>
+                <a href="../img/networks/nsl-diag.png" id="line-nsl" class="portfolio-img"><img
+                    src="../img/networks/nsl-diag.png" id="line-nsl" class="img-fluid" alt="cover-page"></a>
+              </div>
             </div>
 
 
@@ -520,6 +525,7 @@
 
   <script src="../js/copy-to-clipboard.js"></script>
 
+  <script src="../js/theme.js"></script>
 
 </body>
 
