2025-XX Feature Update for Version 2501 (4.2.XX)

--- a/mrt-lines/nsl.html
+++ b/mrt-lines/nsl.html
@@ -157,11 +157,11 @@
             </div>
 
             <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-
               <h3 class="ld-s-title">Line Diagram</h3>
               <div class="row row-line-diag justify-content-center">
-                <a href="../img/networks/nsl-diag.png" id="line-nsl" class="portfolio-img"><img
-                    src="../img/networks/nsl-diag.png" id="line-nsl" class="img-fluid" alt="cover-page"></a>
+                <a href="../img/networks/nsl-diag.png" id="line-nsl" class="portfolio-img">
+                  <img src="../img/networks/nsl-diag.png" id="line-nsl-img" class="img-fluid" alt="cover-page">
+                </a>
               </div>
             </div>
 
@@ -490,7 +490,9 @@
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
+    
 
+  <!-- Chimes -->
   <script>
     var nsl = document.getElementById("chimes");
 
@@ -500,6 +502,41 @@
 
     function pauseAudio() {
       nsl.pause();
+    }
+  </script>
+
+  <!-- Dark Mode Functionality for Individual Pages -->
+  <script>
+    // Check localStorage for dark mode preference
+    if (localStorage.getItem('dark-mode') === 'enabled') {
+      document.body.classList.add('dark-mode');
+      updateHrefForDarkMode();
+    }
+
+    const toggleButton = document.getElementById('dark-mode-toggle');
+    toggleButton.addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+      // Save the preference in localStorage
+      if (document.body.classList.contains('dark-mode')) {
+        localStorage.setItem('dark-mode', 'enabled');
+      } else {
+        localStorage.setItem('dark-mode', 'disabled');
+      }
+      updateHrefForDarkMode();
+    });
+
+    function updateHrefForDarkMode() {
+      const link = document.getElementById('line-nsl');
+      const img = document.getElementById('line-nsl-img');
+      const isDarkMode = document.body.classList.contains('dark-mode');
+
+      if (isDarkMode) {
+        link.href = '../img/networks/nsl-diag-dark.png';
+        img.src = '../img/networks/nsl-diag-dark.png';
+      } else {
+        link.href = '../img/networks/nsl-diag.png';
+        img.src = '../img/networks/nsl-diag.png';
+      }
     }
   </script>
 
@@ -524,8 +561,6 @@
   <script src="../js/portfolio-comp.js"></script>
 
   <script src="../js/copy-to-clipboard.js"></script>
-
-  <script src="../js/theme.js"></script>
 
 </body>
 
