--- a/mrt-lines/nsl.html
+++ b/mrt-lines/nsl.html
@@ -94,7 +94,7 @@
       <div class="container container-summary">
         <div class="col-lg-12">
           <div class="main-title">
-            <span style="color: #b70e0e; cursor: pointer;" title="Click me to hear one of the NSL Chimes!"
+            <span style="color: #ea1c2d; cursor: pointer;" title="Click me to hear one of the NSL Chimes!"
               onclick="playAudio()">SMRT Trains</span>
             <h1 style="cursor: default;">
               North-South Line</h1>
@@ -149,7 +149,7 @@
                       Along its route are eight interchanges that connect the NSL to the East-West Line (EWL), Circle
                       Line
                       (CCL), Downtown Line (DTL), North East Line (NEL) and Bukit Panjang LRT. <br><br> (Source: <a
-                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/north_south_line.html">LTA)</a>
+                        href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/north_south_line.html">LTA</a>)
                     </p>
                   </div>
                 </div>
@@ -490,7 +490,7 @@
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
-    
+
 
   <!-- Chimes -->
   <script>
