--- a/mrt-lines/sk.html
+++ b/mrt-lines/sk.html
@@ -94,7 +94,7 @@
       <div class="container container-summary">
         <div class="col-lg-12">
           <div class="main-title">
-            <span style="color: rgb(150, 72, 160); cursor: default;">SBS Transit</span>
+            <span style="color: #9648a0; cursor: default;">SBS Transit</span>
             <h1 style="cursor: default;">
               Sengkang LRT</h1>
           </div>
