--- a/overview/days-overview.html
+++ b/overview/days-overview.html
@@ -1,12 +1,8 @@
 <div class="row row-lrd">
-    <div class="alert alert-do alert-info" role="alert">
-        <i class="fa-solid fa-circle-info"></i>&nbsp;<b>Delays Overview & Incidents are updated separately.</b>
-    </div>
-
-    <div class="alert alert-primary wow fadeInUp" data-wow-delay="100ms" role="alert" style="margin-bottom: 2em;"> <i
+    <div class="alert alert-primary wow fadeInUp" data-wow-delay="100ms" role="alert" style="margin-bottom: 2em; cursor: default;"> <i
             class="fa-solid fa-circle-info"></i>&nbsp;
         <b id="data-date"></b>
-    </div>
+    </div> 
 
     <!-- NSL -->
     <div class="col-xl-3 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
@@ -21,6 +17,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-01-10"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
+                                data-last-delay="2025-01-10"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/NSLCap.png" alt="NSL" width="55px">
@@ -43,6 +43,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2024-12-17"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="ewl-last-delay"
+                                data-last-delay="2024-12-17"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/EWLCap.png" alt="EWL" width="55px">
@@ -65,6 +69,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2024-05-30"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nel-last-delay"
+                                data-last-delay="2024-05-30"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/NELCap.png" alt="NEL" width="55px">
@@ -87,6 +95,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2024-12-23"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
+                                data-last-delay="2024-12-23"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/CCLCap.png" alt="CCL" width="55px">
@@ -109,6 +121,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2024-05-24"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
+                                data-last-delay="2024-05-24"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/DTLCap.png" alt="DTL" width="55px">
@@ -131,6 +147,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-01-02"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
+                                data-last-delay="2025-01-02"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/TELCap.png" alt="TEL" width="55px">
@@ -153,6 +173,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2024-10-22"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
+                                data-last-delay="2024-10-22"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/BPCap.png" alt="BPLRT" width="55px">
@@ -175,6 +199,10 @@
                         <div class="h5 days mb-0 font-weight-bold" data-last-delay="2024-06-09"></div>
                         <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                             since last reported delay</div>
+                        <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
+                            <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
+                                data-last-delay="2024-06-09"></span>
+                        </div>
                     </div>
                     <div class="col-auto">
                         <img src="img/caplets/SKPGCap.png" alt="SKPGLRT" width="55px">
