2025-04 Feature Update for Version Next (4.6.0)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <link rel="stylesheet" href="css/style-breakpoints.css">
     <link rel="stylesheet" href="css/dark-mode.css">
 
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/carousel.css">
+
+
+
     <link rel="stylesheet" type="text/css"
         href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 
@@ -356,6 +361,10 @@
             </div>
         </div>
 
+
+
+
+
         <div class="row">
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
                 <a href="./about.html" class="btn pw-btn btn-2 mt-15">About Me &nbsp;<i
@@ -363,6 +372,8 @@
             </div>
         </div>
     </section>
+
+
 
     <footer class="footer-area">
         <div class="container container-xxl">
@@ -397,7 +408,7 @@
             data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
             </script>
 
-        <script src="js/theme.js"></script>
+        <script src="js/theme-index.js"></script>
 
         <script src="js/jquery.min.js"></script>
 
