2025-XX Feature Update for Version Next (5.0.x)

--- a/about copy.html
+++ b/about copy.html
@@ -29,7 +29,7 @@
 
         gtag('config', 'G-WN76281P3Q');
     </script>
-
+    
 </head>
 
 </head>
@@ -183,38 +183,54 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="period-date-edu">
+                            2019 - 2022
+                        </div>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Diploma in Information
+                            Technology</h3>
+                        <h4 style="font-size: 15px;">Singapore Polytechnic (SP)</h4>
+                        <p>Tertiary Education (2)</p>
+                    </div>
+                </div>
 
-            <div class="timeline-horizontal">
-                <div class="timeline-item ">
-                    <h4>2019 - 2022</h4>
-                    <p>Diploma in Information Technology</p>
-                    <p>Singapore Polytechnic (SP)</p>
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                        <div class="period-date-edu">
+                            2017 - 2018
+                        </div>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">NITEC in Information
+                            Technlogy</h3>
+                        <h4 style="font-size: 15px;">Institute of Technical Education (ITE)</h4>
+                        <p>Tertiary Education (1)</p>
+                    </div>
                 </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                        <div class="period-date-edu">
+                            2013 - 2016
+                        </div>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">N Levels</h3>
+                        <h4 style="font-size: 15px;">Chua Chu Kang Secondary School</h4>
+                        <p>Secondary Education</p>
+                    </div>
                 </div>
-                <div class="timeline-item">
-                    <h4>2017 - 2018</h4>
-                    <p>NITEC in Information Technology</p>
-                    <p>Institute of Technical Education (ITE)</p>
-                </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div class="timeline-item">
-                    <h4>2013 - 2016</h4>
-                    <p>N Levels</p>
-                    <p>Chua Chu Kang Secondary School</p>
-                </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div class="timeline-item">
-                    <h4>2007 - 2012</h4>
-                    <p>PSLE</p>
-                    <p>Unity Primary School</p>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="period-date-edu">
+                            2007 - 2012
+                        </div>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">PSLE</h3>
+                        <h4 style="font-size: 15px;">Unity Primary School</h4>
+                        <p>Primary Education</p>
+                    </div>
                 </div>
             </div>
+
 
             <!-- Awards & Achievements -->
             <div class="row">
@@ -299,47 +315,30 @@
                     </div>
                 </div>
             </div>
-
-            <div class="timeline-horizontal">
-                <div class="timeline-item ">
-                    <h4>Mar 2025 - Present</h4>
-                    <p>National Trades Union Congress</p>
-                    <p style="font-size: 15px; text-align: left;">
-                        - Associate, Membership Services Division</b>
-                    </p>
-                </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div class="timeline-item">
-                    <h4>Oct - Nov 2024</h4>
-                    <p>Alphaeus Pte Ltd</p>
-                    <p style="font-size: 15px; text-align: left;">
-                        - IT Desktop Support Engineer (Kyndryl)</b>
-                    </p>
-                </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div class="timeline-item">
-                    <h4>2013 - 2016</h4>
-                    <p>N Levels</p>
-                    <p>Chua Chu Kang Secondary School</p>
-                </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div class="timeline-item">
-                    <h4>2007 - 2012</h4>
-                    <p>PSLE</p>
-                    <p>Unity Primary School</p>
-                </div>
-            </div>
-
-
-
             <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="period-date-exp">
+                            Mar 2025 - Present
+                        </div>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">National Trades Union Congress (NTUC)</h4>
+                            <p style="font-size: 15px; text-align: left;">
+                                - Associate, Membership Services Division</b>
+                            </p>
+                    </div>
+                </div>
 
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="period-date-exp">
+                            Oct - Nov 2024
+                        </div>
+                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Alphaeus Pte Ltd</h4>
+                            <p style="font-size: 15px; text-align: left;">
+                                - IT Desktop Support Engineer (Kyndryl)</b>
+                            </p>
+                    </div>
+                </div>
 
                 <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
