2025-XX Feature Update for Version Next (5.0.x)

--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h2 style="font-size: 35px">Timelines</h2>
+                        <h2 style="font-size: 35px">Timelines & Milestones</h2>
                     </div>
                 </div>
 
@@ -186,32 +186,25 @@
 
             <div class="timeline-horizontal">
                 <div class="timeline-item ">
-                    <h4>2019 - 2022</h4>
-                    <p>Diploma in Information Technology</p>
+                    <h4 class="timeline-date-edu">2019 - 2022</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Diploma in Information
+                        Technology</h3>
                     <p>Singapore Polytechnic (SP)</p>
                 </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
+                <div class="timeline-item">
+                    <h4 class="timeline-date-edu">2017 - 2018</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">NITEC in Information Technology
+                    </h3>
+                    <p>ITE College West</p>
                 </div>
                 <div class="timeline-item">
-                    <h4>2017 - 2018</h4>
-                    <p>NITEC in Information Technology</p>
-                    <p>Institute of Technical Education (ITE)</p>
-                </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div class="timeline-item">
-                    <h4>2013 - 2016</h4>
-                    <p>N Levels</p>
+                    <h4 class="timeline-date-edu">2013 - 2016</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">N Levels</h3>
                     <p>Chua Chu Kang Secondary School</p>
                 </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
                 <div class="timeline-item">
-                    <h4>2007 - 2012</h4>
-                    <p>PSLE</p>
+                    <h4 class="timeline-date-edu">2007 - 2012</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">PSLE</h3>
                     <p>Unity Primary School</p>
                 </div>
             </div>
@@ -221,71 +214,55 @@
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
                         <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;"><u>Awards
-                                &
-                                Achievements</u></h2>
+                                & Achievements</u></h2>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="period-date-aa">
-                            2023
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)
-                            </h4>
-                            <p style="font-size: 15px; text-align: left;">
-                                - Base Sergeant Major Coin (Supply Base Central)
-                            </p>
-                    </div>
-                </div>
 
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="period-date-aa">
-                            2019
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical
-                            Education (ITE)</h4>
-                            <p style="font-size: 15px; text-align: left;">
-                                - Graduated from ITE <br>
-                                - ITE Gold Course Medal/Graduation Ceremony <br>
-                                - Anugerah Mendaki - 2019 <br>
-                                - Bestari Award <br>(Academic Performance) - 4PM <br>
-                            </p>
-                    </div>
+            <div class="timeline-horizontal">
+                <div class="timeline-item ">
+                    <h4 class="timeline-date-aa">2023</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Singapore Armed Forces (SAF)
+                    </h3>
+                    <p style="font-size: 15px; text-align: left;">
+                        - Base Sergeant Major Coin (Supply Base Central)
+                    </p>
                 </div>
-
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-                        <div class="period-date-aa">
-                            2018
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical
-                            Education (ITE)</h4>
-                            <p style="font-size: 15px; text-align: left;">
-                                - Service Star Award (Gold) <br>
-                                - Director's List (Year 2) <br>
-                                - Edusave Character Award <br>
-                                - Appointment (Vice President – Mobile Apps & Services Club) <br>
-                                - CDC & CCC ITE Scholarship
-                            </p>
-                    </div>
+                <div class="timeline-item">
+                    <h4 class="timeline-date-aa">2019</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Institute of Technical
+                        Education (ITE)
+                    </h3>
+                    <p style="font-size: 15px; text-align: left;">
+                        - Graduated from ITE <br>
+                        - ITE Gold Course Medal/Graduation Ceremony <br>
+                        - Anugerah Mendaki - 2019 <br>
+                        - Bestari Award <br>(Academic Performance) - 4PM <br>
+                    </p>
                 </div>
-
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="period-date-aa">
-                            2017
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Institute of Technical
-                            Education (ITE)</h4>
-                            <p style="font-size: 15px; text-align: justify;">
-                                - Director's List (Year 1) <br>
-                                - Edusave Character Award <br>
-                                - CDC & CCC ITE Scholarship
-                            </p>
-                    </div>
+                <div class="timeline-item">
+                    <h4 class="timeline-date-aa">2018</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Institute of Technical
+                        Education (ITE)
+                    </h3>
+                    <p style="font-size: 15px; text-align: left;">
+                        - Service Star Award (Gold) <br>
+                        - Director's List (Year 2) <br>
+                        - Edusave Character Award <br>
+                        - Appointment (Vice President – Mobile Apps & Services Club) <br>
+                        - CDC & CCC ITE Scholarship
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <h4 class="timeline-date-aa">2017</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Institute of Technical
+                        Education (ITE)
+                    </h3>
+                    <p style="font-size: 15px; text-align: justify;">
+                        - Director's List (Year 1) <br>
+                        - Edusave Character Award <br>
+                        - CDC & CCC ITE Scholarship
+                    </p>
                 </div>
             </div>
 
@@ -302,95 +279,53 @@
 
             <div class="timeline-horizontal">
                 <div class="timeline-item ">
-                    <h4>Mar 2025 - Present</h4>
-                    <p>National Trades Union Congress</p>
+                    <h4 class="timeline-date-exp">Mar 2025 - Present</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">National Trades Union Congress
+                        (NTUC)</h3>
                     <p style="font-size: 15px; text-align: left;">
                         - Associate, Membership Services Division</b>
                     </p>
                 </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
+
                 <div class="timeline-item">
-                    <h4>Oct - Nov 2024</h4>
-                    <p>Alphaeus Pte Ltd</p>
+                    <h4 class="timeline-date-exp">Oct - Nov 2024</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Alphaeus Pte Ltd/Kyndryl</h3>
                     <p style="font-size: 15px; text-align: left;">
-                        - IT Desktop Support Engineer (Kyndryl)</b>
+                        - IT Desktop Support Engineer</b>
                     </p>
                 </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
+                <div class="timeline-item">
+                    <h4 class="timeline-date-exp">Dec 2022 - Jul 2024</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Singapore Armed Forces (SAF)
+                    </h3>
+                    <p style="font-size: 15px; text-align: left;">
+                        <b>Sep 2023 - Jul 2024</b><br>
+                        - Supply Assistant (GE) (2) - SBC CP ASA <br>
+                        <b>Dec 2022 - Sep 2023</b><br>
+                        - Supply Assistant (GE) (1) - SBC CP GE Store - SBC CP ASA
+                    </p>
                 </div>
                 <div class="timeline-item">
-                    <h4>2013 - 2016</h4>
-                    <p>N Levels</p>
-                    <p>Chua Chu Kang Secondary School</p>
+                    <h4 class="timeline-date-exp">Oct 2021 - Feb 2022</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">HatchDev Asia</h3>
+                    <p style="font-size: 15px; text-align: left;">
+                        - Front-End Developer/UX Designer - Full-Time/Final-Year Project
+                    </p>
                 </div>
-                <div class="timeline-arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
+
+                <div class="timeline-item">
+                    <h4 class="timeline-date-exp">Mar 2021 - Aug 2021</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Housing & Development Board</h3>
+                    <p style="font-size: 15px; text-align: left;">
+                        - Intern, Information Services Group <br>
+                    </p>
                 </div>
                 <div class="timeline-item">
-                    <h4>2007 - 2012</h4>
-                    <p>PSLE</p>
-                    <p>Unity Primary School</p>
-                </div>
-            </div>
-
-
-
-            <div class="row">
-
-
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="period-date-exp">
-                            Dec 2022 - Jul 2024
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Singapore Armed Forces (SAF)
-                            </h4>
-                            <p style="font-size: 15px; text-align: left;">
-                                - Supply Assistant (GE) (2) - SBC CP ASA <br> <b>Sep 2023 - Jul 2024</b><br>
-                                - Supply Assistant (GE) (1) - SBC CP GE Store - SBC CP ASA <br> <b>Dec 2022 - Sep
-                                    2023</b>
-                            </p>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="period-date-exp">
-                            Oct 2021 - Feb 2022
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">HatchDev Asia</h4>
-                            <p style="font-size: 15px; text-align: left;">
-                                - Front-End Developer/UX Designer - Full-Time/Final-Year Project
-                            </p>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-                        <div class="period-date-exp">
-                            Mar 2021 - Aug 2021
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Housing & Development Board
-                            </h4>
-                            <p style="font-size: 15px; text-align: left;">
-                                - Intern, Information Services Group <br>
-                            </p>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
-                        <div class="period-date-exp">
-                            Jan 2019 - Feb 2019
-                        </div>
-                        <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">TTS Group of Companies</h4>
-                            <p style="font-size: 15px; text-align: justify;">
-                                - Public Transport Surveyor - Part-Time
-                            </p>
-                    </div>
+                    <h4 class="timeline-date-exp">Jan 2019 - Feb 2019</h4>
+                    <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">TTS Group of Companies</h3>
+                    <p style="font-size: 15px; text-align: left;">
+                        - Public Transport Surveyor - Part-Time <br>
+                    </p>
                 </div>
             </div>
         </div>
