--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h2 style="font-size: 30px">Skills & Software Proficiency</h2>
+                        <h2 style="font-size: 30px">Skills & Design Proficiency</h2>
                     </div>
                 </div>
             </div>
@@ -334,7 +334,7 @@
             </div>
         </div>
 
-        <div class="instragram-feed-area owl-carousel wow fadeInUp" data-wow-delay="300ms">
+        <!-- <div class="instragram-feed-area owl-carousel wow fadeInUp" data-wow-delay="300ms">
 
             <div class="single-software-item">
                 <img src="img/gallery/brand1.png" alt="inkscape">
@@ -359,7 +359,7 @@
             <div class="single-software-item">
                 <img src="img/gallery/brand6.png" alt="windows">
             </div>
-        </div>
+        </div> -->
 
 
 
