2025-XX Feature Update for Version Next (5.0.x)

--- a/about.html
+++ b/about.html
@@ -178,13 +178,13 @@
 
                 <!-- Education -->
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
                         <h1 style="text-align: left; margin-bottom: -45px; font-size: 36px;"><u>Education</u></h2>
                     </div>
                 </div>
             </div>
 
-            <div class="timeline-horizontal">
+            <div class="timeline-horizontal wow fadeInUp" data-wow-delay="100ms">
                 <div class="timeline-item ">
                     <h4 class="timeline-date-edu">2019 - 2022</h4>
                     <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Diploma in Information
@@ -212,14 +212,14 @@
             <!-- Awards & Achievements -->
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
                         <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;"><u>Awards
                                 & Achievements</u></h2>
                     </div>
                 </div>
             </div>
 
-            <div class="timeline-horizontal">
+            <div class="timeline-horizontal wow fadeInUp" data-wow-delay="300ms">
                 <div class="timeline-item ">
                     <h4 class="timeline-date-aa">2023</h4>
                     <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Singapore Armed Forces (SAF)
@@ -270,14 +270,14 @@
             <!-- Experiences -->
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="50ms">
                         <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;">
                             <u>Experiences</u></h2>
                     </div>
                 </div>
             </div>
 
-            <div class="timeline-horizontal">
+            <div class="timeline-horizontal wow fadeInUp" data-wow-delay="500ms">
                 <div class="timeline-item ">
                     <h4 class="timeline-date-exp">Mar 2025 - Present</h4>
                     <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">National Trades Union Congress
