--- a/index-dev-1.html
+++ b/index-dev-1.html
@@ -695,7 +695,7 @@
             data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
             </script>
 
-        <script src="js/theme copy.js"></script>
+        <script src="js/theme-index.js"></script>
 
         <script src="js/jquery.min.js"></script>
 
